// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> CriticalRanks story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-critical btn-primary"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--secondary button--lg button--size-lg button--variant-critical btn-secondary"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-critical btn-tertiary"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> Default story renders snapshot 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
  type="button"
>
  <span
    class="text text--label-lg button__text"
  >
    Button
  </span>
</button>
`;

exports[`<Button /> DefaultRanks story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default btn-primary"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default btn-secondary"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-default btn-tertiary"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> Disabled story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--disabled button--primary button--lg button--size-lg button--variant-default btn-primary"
    disabled=""
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--disabled button--secondary button--lg button--size-lg button--variant-default btn-secondary"
    disabled=""
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--disabled button--tertiary button--lg button--size-lg button--variant-default btn-tertiary"
    disabled=""
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> DisabledFullWidths story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--disabled button--full-width button--primary button--lg button--size-lg button--variant-default"
    disabled=""
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Large
    </span>
  </button>
  <button
    class="button button--layout-none button--disabled button--full-width button--primary button--md button--size-md button--variant-default"
    disabled=""
    type="button"
  >
    <span
      class="text text--label-md button__text"
    >
      Medium
    </span>
  </button>
  <button
    class="button button--layout-none button--disabled button--full-width button--primary button--sm button--size-sm button--variant-default"
    disabled=""
    type="button"
  >
    <span
      class="text text--label-sm button__text"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`<Button /> FullWidths story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--full-width button--primary button--lg button--size-lg button--variant-default"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Large
    </span>
  </button>
  <button
    class="button button--layout-none button--full-width button--primary button--md button--size-md button--variant-default"
    type="button"
  >
    <span
      class="text text--label-md button__text"
    >
      Medium
    </span>
  </button>
  <button
    class="button button--layout-none button--full-width button--primary button--sm button--size-sm button--variant-default"
    type="button"
  >
    <span
      class="text text--label-sm button__text"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`<Button /> IconLayouts story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-left button--primary button--lg button--size-lg button--variant-default"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
        />
      </svg>
      Left
    </span>
  </button>
  <button
    class="button button--layout-right button--primary button--lg button--size-lg button--variant-default"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Right
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
        />
      </svg>
    </span>
  </button>
  <button
    aria-label="Label must be applied with icon-only layout"
    class="button button--layout-icon-only button--primary button--lg button--size-lg button--variant-default"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`<Button /> InverseDisabledRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--disabled button--primary button--lg button--size-lg button--variant-inverse btn-primary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--disabled button--secondary button--lg button--size-lg button--variant-inverse btn-secondary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--disabled button--tertiary button--lg button--size-lg button--variant-inverse btn-tertiary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> InverseRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--size-lg button--variant-inverse btn-primary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--size-lg button--variant-inverse btn-secondary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-inverse btn-tertiary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> JustDisabledProp story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--size-lg button--variant-default btn-primary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default btn-secondary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-default btn-tertiary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> LoadingStates story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--loading button--primary button--lg button--size-lg button--variant-default"
    type="button"
  >
    <span
      class="text text--label-lg button__text button--is-loading"
    >
      Large
    </span>
    <div
      aria-busy="true"
      aria-label="loading"
      class="loading-indicator button__loader"
      data-testid="oval-loading"
      role="status"
    >
      <svg
        data-testid="oval-svg"
        height="16"
        stroke="transparent"
        viewBox="-22 -22 46 46"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            data-testid="oval-secondary-group"
            stroke-width="4"
            transform="translate(1 1)"
          >
            <circle
              cx="0"
              cy="0"
              r="20"
              stroke="transparent"
              stroke-opacity=".5"
              stroke-width="4"
            />
            <path
              d="M20 0c0-9.94-8.06-20-20-20"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 0 0"
                repeatCount="indefinite"
                to="360 0 0"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </div>
  </button>
  <button
    class="button button--layout-none button--loading button--primary button--md button--size-md button--variant-default"
    type="button"
  >
    <span
      class="text text--label-md button__text button--is-loading"
    >
      Medium
    </span>
    <div
      aria-busy="true"
      aria-label="loading"
      class="loading-indicator button__loader"
      data-testid="oval-loading"
      role="status"
    >
      <svg
        data-testid="oval-svg"
        height="16"
        stroke="transparent"
        viewBox="-22 -22 46 46"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            data-testid="oval-secondary-group"
            stroke-width="4"
            transform="translate(1 1)"
          >
            <circle
              cx="0"
              cy="0"
              r="20"
              stroke="transparent"
              stroke-opacity=".5"
              stroke-width="4"
            />
            <path
              d="M20 0c0-9.94-8.06-20-20-20"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 0 0"
                repeatCount="indefinite"
                to="360 0 0"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </div>
  </button>
  <button
    class="button button--layout-none button--loading button--primary button--sm button--size-sm button--variant-default"
    type="button"
  >
    <span
      class="text text--label-sm button__text button--is-loading"
    >
      Small
    </span>
    <div
      aria-busy="true"
      aria-label="loading"
      class="loading-indicator button__loader"
      data-testid="oval-loading"
      role="status"
    >
      <svg
        data-testid="oval-svg"
        height="16"
        stroke="transparent"
        viewBox="-22 -22 46 46"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            data-testid="oval-secondary-group"
            stroke-width="4"
            transform="translate(1 1)"
          >
            <circle
              cx="0"
              cy="0"
              r="20"
              stroke="transparent"
              stroke-opacity=".5"
              stroke-width="4"
            />
            <path
              d="M20 0c0-9.94-8.06-20-20-20"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 0 0"
                repeatCount="indefinite"
                to="360 0 0"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </div>
  </button>
</div>
`;

exports[`<Button /> NeutralRanks story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-neutral btn-primary"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--secondary button--lg button--size-lg button--variant-neutral btn-secondary"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-neutral btn-tertiary"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> Sizes story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Large
    </span>
  </button>
  <button
    class="button button--layout-none button--primary button--md button--size-md button--variant-default"
    type="button"
  >
    <span
      class="text text--label-md button__text"
    >
      Medium
    </span>
  </button>
  <button
    class="button button--layout-none button--primary button--sm button--size-sm button--variant-default"
    type="button"
  >
    <span
      class="text text--label-sm button__text"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`<Button /> TertiaryStandalone story renders snapshot 1`] = `
<button
  class="button button--context-standalone button--layout-none button--tertiary button--lg button--size-lg button--variant-default"
  type="button"
>
  <span
    class="text text--label-lg button__text"
  >
    Button
  </span>
</button>
`;

exports[`<Button /> UsingExtendedLink story renders snapshot 1`] = `
<div>
  Lorem ipsum dolor sit amet, . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
   
  <button
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    to="test"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      consectetur adipiscing elit
    </span>
  </button>
</div>
`;

exports[`<Button /> passes class names down properly 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--size-lg button--variant-default exampleClassName"
  data-testid="example-class-name"
  type="button"
>
  <span
    class="text text--label-lg button__text"
  >
    Click
  </span>
</button>
`;

exports[`<Button /> passes test ids down properly 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
  data-testid="example-test-id"
  type="button"
>
  <span
    class="text text--label-lg button__text"
  >
    Click
  </span>
</button>
`;
